[gd_scene load_steps=2 format=3 uid="uid://dm0205pi74m4"]

[ext_resource type="Script" path="res://scenes/writing/intrusive_word_manager.gd" id="1_2e3mm"]

[node name="IntrusiveWordManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2e3mm")

[node name="Timer" type="Timer" parent="."]

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
